import org.apache.tools.ant.taskdefs.condition.Os

plugins {
    id 'org.springframework.boot' version '3.0.4'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
}

group = 'com.sb'
version = '0.6'
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://maven.sergeybochkov.com/releases"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'com.miglayout:miglayout-swing:11.0'
    implementation 'com.formdev:flatlaf:3.0'
    implementation 'com.sb:bdev-rt:1.0.3.RELEASE'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootRun') {
    jvmArgs += [
            '-Xms64m',
            '-Xmx128m',
            '-Dfile.encoding=UTF-8'
    ]
    if (JavaVersion.current() >= JavaVersion.VERSION_1_9) {
        jvmArgs += [
                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
        ]
    }
    if (Os.isFamily(Os.FAMILY_MAC)) {
        if (JavaVersion.current() >= JavaVersion.VERSION_17) {
            jvmArgs += ['-Dsun.java2d.metal=true']
        }
        jvmArgs += ['-Xdock:name=SamyGo Channel Editor']
    }
}